# biotrump-cv

./: .gitignore  .kateproject  CMakeLists.txt  README.md  build.sh  clean_all.sh  config.sh  ffts.sh  lapack.sh  load-config.sh  opencv.sh  opencv.sh.x  setup.sh  tree.txt
cmake/: CVEnvImport.cmake
